--- a/WebContent/frontEnd/index.html
+++ b/WebContent/frontEnd/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FrontEndSrc</title>
+  <title>Call Tree Admin. Page</title>
   <base href="/CallTreeAdmin/frontEnd/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
